## the following clause may NOT be split, b/c of autoreconf 2.61 and older
## the --install requires automake 1.10 which was released in 2006
## the --install can be edited out to use older automake
ACLOCAL_AMFLAGS = -I m4 --install

libt_dir = $(srcdir)/src/libtorrent
libt_src_dir = $(libt_dir)/src

SEARCHDIRS = \
	-I$(srcdir)/src

if USE_WINDRES
SEARCHDIRS += \
	-I$(libt_dir)/include -I$(libt_dir)/include/libtorrent  \
	-I$(libt_dir)/zlib -I$(libt_dir) -I $(libt_dir)/asio
endif

AM_CPPFLAGS = \
	$(WX_CPPFLAGS) \
	$(LIBTORRENT_CFLAGS) \
	$(SDL_CFLAGS) \
	-DLOCALEDIR=\"$(localedir)\" \
	$(SEARCHDIRS)

# strict aliasing check is disabled, because wxWidgets headers have problems
AM_CXXFLAGS = \
	-Wall \
	-Wno-strict-aliasing 

desktopdir = $(datadir)/applications
dist_desktop_DATA = \
	src/springlobby.desktop

pixmapdir = $(datadir)/pixmaps
dist_pixmap_DATA = \
	src/images/springlobby.svg
SUBDIRS = po

## if you don't have the required version of autoconf, comment out the
## following clause, in which case you may NOT distribute the result!
dist_doc_DATA = \
	AUTHORS \
	ChangeLog \
	COPYING \
	INSTALL \
	NEWS \
	README \
	THANKS

bin_PROGRAMS = \
	springlobby \
	springsettings

springlobby_LDADD = \
	$(WX_LIBS)\
	$(LIBTORRENT_LIBS) \
	$(SDL_LIBS)

#put template source files here (those need to be present in tarball, but not compiled)
EXTRA_DIST = \
	src/battleroommmoptionstab.cpp \
	src/customvirtlistctrl.cpp \
	src/playback/playbacktab.cpp \
	src/playback/playbackfilter.cpp \
	src/playback/playbackthread.cpp \
	src/playback/playbacklistctrl.cpp 
	

springsettings_LDADD = \
	$(WX_LIBS)

if USE_WINDRES
RESOURCECOMPILE = $(WINDRES) -I $(srcdir)/src $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
    $(AM_CPPFLAGS) $(CPPFLAGS) # $(AM_CXXFLAGS) $(CXXFLAGS)
.rc.o:
	$(RESOURCECOMPILE) -o $@ -i $<
endif


libtorrent_sources = \
	$(libt_src_dir)/entry.cpp \
	$(libt_src_dir)/escape_string.cpp \
	$(libt_src_dir)/assert.cpp \
	$(libt_src_dir)/enum_net.cpp \
	$(libt_src_dir)/broadcast_socket.cpp \
	$(libt_src_dir)/peer_connection.cpp \
	$(libt_src_dir)/bt_peer_connection.cpp \
	$(libt_src_dir)/web_peer_connection.cpp \
	$(libt_src_dir)/natpmp.cpp \
	$(libt_src_dir)/piece_picker.cpp \
	$(libt_src_dir)/policy.cpp \
	$(libt_src_dir)/session.cpp \
	$(libt_src_dir)/session_impl.cpp \
	$(libt_src_dir)/sha1.cpp \
	$(libt_src_dir)/stat.cpp \
	$(libt_src_dir)/storage.cpp \
	$(libt_src_dir)/torrent.cpp \
	$(libt_src_dir)/torrent_handle.cpp \
	$(libt_src_dir)/pe_crypto.cpp \
	$(libt_src_dir)/torrent_info.cpp \
	$(libt_src_dir)/tracker_manager.cpp \
	$(libt_src_dir)/http_connection.cpp \
	$(libt_src_dir)/http_tracker_connection.cpp \
	$(libt_src_dir)/udp_tracker_connection.cpp \
	$(libt_src_dir)/alert.cpp \
	$(libt_src_dir)/identify_client.cpp \
	$(libt_src_dir)/ip_filter.cpp \
	$(libt_src_dir)/file.cpp \
	$(libt_src_dir)/metadata_transfer.cpp \
	$(libt_src_dir)/logger.cpp \
	$(libt_src_dir)/file_pool.cpp \
	$(libt_src_dir)/ut_pex.cpp \
	$(libt_src_dir)/lsd.cpp \
	$(libt_src_dir)/upnp.cpp \
	$(libt_src_dir)/instantiate_connection.cpp \
	$(libt_src_dir)/socks5_stream.cpp \
	$(libt_src_dir)/socks4_stream.cpp \
	$(libt_src_dir)/http_stream.cpp \
	$(libt_src_dir)/connection_queue.cpp \
	$(libt_src_dir)/disk_io_thread.cpp \
	\
	$(libt_src_dir)/kademlia/closest_nodes.cpp \
	$(libt_src_dir)/kademlia/dht_tracker.cpp \
	$(libt_src_dir)/kademlia/find_data.cpp \
	$(libt_src_dir)/kademlia/node.cpp \
	$(libt_src_dir)/kademlia/node_id.cpp \
	$(libt_src_dir)/kademlia/refresh.cpp \
	$(libt_src_dir)/kademlia/routing_table.cpp \
	$(libt_src_dir)/kademlia/rpc_manager.cpp \
	$(libt_src_dir)/kademlia/traversal_algorithm.cpp \
	\
	$(libt_dir)/zlib/adler32.c \
	$(libt_dir)/zlib/compress.c \
	$(libt_dir)/zlib/crc32.c \
	$(libt_dir)/zlib/deflate.c \
	$(libt_dir)/zlib/gzio.c \
	$(libt_dir)/zlib/infback.c \
	$(libt_dir)/zlib/inffast.c \
	$(libt_dir)/zlib/inflate.c \
	$(libt_dir)/zlib/inftrees.c \
	$(libt_dir)/zlib/trees.c \
	$(libt_dir)/zlib/uncompr.c \
	$(libt_dir)/zlib/zutil.c

libtorrent_headers = \
	$(libt_dir)/include/libtorrent/alert.hpp \
	$(libt_dir)/include/libtorrent/alert_types.hpp \
	$(libt_dir)/include/libtorrent/assert.hpp \
	$(libt_dir)/include/libtorrent/aux_/session_impl.hpp \
	$(libt_dir)/include/libtorrent/bandwidth_manager.hpp \
	$(libt_dir)/include/libtorrent/bandwidth_limit.hpp \
	$(libt_dir)/include/libtorrent/bandwidth_queue_entry.hpp \
	$(libt_dir)/include/libtorrent/bencode.hpp \
	$(libt_dir)/include/libtorrent/broadcast_socket.hpp \
	$(libt_dir)/include/libtorrent/buffer.hpp \
	$(libt_dir)/include/libtorrent/connection_queue.hpp \
	$(libt_dir)/include/libtorrent/debug.hpp \
	$(libt_dir)/include/libtorrent/disk_io_thread.hpp \
	$(libt_dir)/include/libtorrent/entry.hpp \
	$(libt_dir)/include/libtorrent/enum_net.hpp \
	$(libt_dir)/include/libtorrent/escape_string.hpp \
	$(libt_dir)/include/libtorrent/extensions.hpp \
	$(libt_dir)/include/libtorrent/extensions/metadata_transfer.hpp \
	$(libt_dir)/include/libtorrent/extensions/logger.hpp \
	$(libt_dir)/include/libtorrent/extensions/ut_pex.hpp \
	$(libt_dir)/include/libtorrent/file.hpp \
	$(libt_dir)/include/libtorrent/file_pool.hpp \
	$(libt_dir)/include/libtorrent/fingerprint.hpp \
	$(libt_dir)/include/libtorrent/hasher.hpp \
	$(libt_dir)/include/libtorrent/http_connection.hpp \
	$(libt_dir)/include/libtorrent/http_stream.hpp \
	$(libt_dir)/include/libtorrent/session_settings.hpp \
	$(libt_dir)/include/libtorrent/http_tracker_connection.hpp \
	$(libt_dir)/include/libtorrent/identify_client.hpp \
	$(libt_dir)/include/libtorrent/instantiate_connection.hpp \
	$(libt_dir)/include/libtorrent/intrusive_ptr_base.hpp \
	$(libt_dir)/include/libtorrent/invariant_check.hpp \
	$(libt_dir)/include/libtorrent/io.hpp \
	$(libt_dir)/include/libtorrent/ip_filter.hpp \
	$(libt_dir)/include/libtorrent/chained_buffer.hpp \
	$(libt_dir)/include/libtorrent/lsd.hpp \
	$(libt_dir)/include/libtorrent/peer.hpp \
	$(libt_dir)/include/libtorrent/peer_connection.hpp \
	$(libt_dir)/include/libtorrent/bt_peer_connection.hpp \
	$(libt_dir)/include/libtorrent/web_peer_connection.hpp \
	$(libt_dir)/include/libtorrent/pe_crypto.hpp \
	$(libt_dir)/include/libtorrent/natpmp.hpp \
	$(libt_dir)/include/libtorrent/pch.hpp \
	$(libt_dir)/include/libtorrent/peer_id.hpp \
	$(libt_dir)/include/libtorrent/peer_info.hpp \
	$(libt_dir)/include/libtorrent/peer_request.hpp \
	$(libt_dir)/include/libtorrent/piece_block_progress.hpp \
	$(libt_dir)/include/libtorrent/piece_picker.hpp \
	$(libt_dir)/include/libtorrent/policy.hpp \
	$(libt_dir)/include/libtorrent/session.hpp \
	$(libt_dir)/include/libtorrent/size_type.hpp \
	$(libt_dir)/include/libtorrent/socket.hpp \
	$(libt_dir)/include/libtorrent/socket_type.hpp \
	$(libt_dir)/include/libtorrent/socks4_stream.hpp \
	$(libt_dir)/include/libtorrent/socks5_stream.hpp \
	$(libt_dir)/include/libtorrent/stat.hpp \
	$(libt_dir)/include/libtorrent/storage.hpp \
	$(libt_dir)/include/libtorrent/time.hpp \
	$(libt_dir)/include/libtorrent/torrent.hpp \
	$(libt_dir)/include/libtorrent/torrent_handle.hpp \
	$(libt_dir)/include/libtorrent/torrent_info.hpp \
	$(libt_dir)/include/libtorrent/tracker_manager.hpp \
	$(libt_dir)/include/libtorrent/udp_tracker_connection.hpp \
	$(libt_dir)/include/libtorrent/utf8.hpp \
	$(libt_dir)/include/libtorrent/xml_parse.hpp \
	$(libt_dir)/include/libtorrent/variant_stream.hpp \
	$(libt_dir)/include/libtorrent/version.hpp \
	\
	$(libt_dir)/include/libtorrent/kademlia/closest_nodes.hpp \
	$(libt_dir)/include/libtorrent/kademlia/dht_tracker.hpp \
	$(libt_dir)/include/libtorrent/kademlia/find_data.hpp \
	$(libt_dir)/include/libtorrent/kademlia/logging.hpp \
	$(libt_dir)/include/libtorrent/kademlia/msg.hpp \
	$(libt_dir)/include/libtorrent/kademlia/node.hpp \
	$(libt_dir)/include/libtorrent/kademlia/node_entry.hpp \
	$(libt_dir)/include/libtorrent/kademlia/node_id.hpp \
	$(libt_dir)/include/libtorrent/kademlia/observer.hpp \
	$(libt_dir)/include/libtorrent/kademlia/packet_iterator.hpp \
	$(libt_dir)/include/libtorrent/kademlia/refresh.hpp \
	$(libt_dir)/include/libtorrent/kademlia/routing_table.hpp \
	$(libt_dir)/include/libtorrent/kademlia/rpc_manager.hpp \
	$(libt_dir)/include/libtorrent/kademlia/traversal_algorithm.hpp  \
	\
	$(libt_dir)/asio.hpp \
	$(libt_dir)/asio/basic_datagram_socket.hpp \
	$(libt_dir)/asio/basic_deadline_timer.hpp \
	$(libt_dir)/asio/basic_io_object.hpp \
	$(libt_dir)/asio/basic_socket.hpp \
	$(libt_dir)/asio/basic_socket_acceptor.hpp \
	$(libt_dir)/asio/basic_socket_iostream.hpp \
	$(libt_dir)/asio/basic_socket_streambuf.hpp \
	$(libt_dir)/asio/basic_stream_socket.hpp \
	$(libt_dir)/asio/basic_streambuf.hpp \
	$(libt_dir)/asio/buffer.hpp \
	$(libt_dir)/asio/buffered_read_stream.hpp \
	$(libt_dir)/asio/buffered_read_stream_fwd.hpp \
	$(libt_dir)/asio/buffered_stream.hpp \
	$(libt_dir)/asio/buffered_stream_fwd.hpp \
	$(libt_dir)/asio/buffered_write_stream.hpp \
	$(libt_dir)/asio/buffered_write_stream_fwd.hpp \
	$(libt_dir)/asio/completion_condition.hpp \
	$(libt_dir)/asio/datagram_socket_service.hpp \
	$(libt_dir)/asio/deadline_timer.hpp \
	$(libt_dir)/asio/deadline_timer_service.hpp \
	$(libt_dir)/asio/error.hpp \
	$(libt_dir)/asio/error_code.hpp \
	$(libt_dir)/asio/handler_alloc_hook.hpp \
	$(libt_dir)/asio/handler_invoke_hook.hpp \
	$(libt_dir)/asio/io_service.hpp \
	$(libt_dir)/asio/is_read_buffered.hpp \
	$(libt_dir)/asio/is_write_buffered.hpp \
	$(libt_dir)/asio/placeholders.hpp \
	$(libt_dir)/asio/read.hpp \
	$(libt_dir)/asio/read_until.hpp \
	$(libt_dir)/asio/socket_acceptor_service.hpp \
	$(libt_dir)/asio/socket_base.hpp \
	$(libt_dir)/asio/ssl.hpp \
	$(libt_dir)/asio/strand.hpp \
	$(libt_dir)/asio/stream_socket_service.hpp \
	$(libt_dir)/asio/streambuf.hpp \
	$(libt_dir)/asio/system_error.hpp \
	$(libt_dir)/asio/thread.hpp \
	$(libt_dir)/asio/time_traits.hpp \
	$(libt_dir)/asio/version.hpp \
	$(libt_dir)/asio/write.hpp \
	$(libt_dir)/asio/detail/bind_handler.hpp \
	$(libt_dir)/asio/detail/buffer_resize_guard.hpp \
	$(libt_dir)/asio/detail/buffered_stream_storage.hpp \
	$(libt_dir)/asio/detail/call_stack.hpp \
	$(libt_dir)/asio/detail/const_buffers_iterator.hpp \
	$(libt_dir)/asio/detail/consuming_buffers.hpp \
	$(libt_dir)/asio/detail/deadline_timer_service.hpp \
	$(libt_dir)/asio/detail/dev_poll_reactor.hpp \
	$(libt_dir)/asio/detail/dev_poll_reactor_fwd.hpp \
	$(libt_dir)/asio/detail/epoll_reactor.hpp \
	$(libt_dir)/asio/detail/epoll_reactor_fwd.hpp \
	$(libt_dir)/asio/detail/event.hpp \
	$(libt_dir)/asio/detail/fd_set_adapter.hpp \
	$(libt_dir)/asio/detail/handler_alloc_helpers.hpp \
	$(libt_dir)/asio/detail/handler_invoke_helpers.hpp \
	$(libt_dir)/asio/detail/handler_queue.hpp \
	$(libt_dir)/asio/detail/hash_map.hpp \
	$(libt_dir)/asio/detail/io_control.hpp \
	$(libt_dir)/asio/detail/kqueue_reactor.hpp \
	$(libt_dir)/asio/detail/kqueue_reactor_fwd.hpp \
	$(libt_dir)/asio/detail/local_free_on_block_exit.hpp \
	$(libt_dir)/asio/detail/mutex.hpp \
	$(libt_dir)/asio/detail/noncopyable.hpp \
	$(libt_dir)/asio/detail/null_event.hpp \
	$(libt_dir)/asio/detail/null_mutex.hpp \
	$(libt_dir)/asio/detail/null_signal_blocker.hpp \
	$(libt_dir)/asio/detail/null_thread.hpp \
	$(libt_dir)/asio/detail/null_tss_ptr.hpp \
	$(libt_dir)/asio/detail/old_win_sdk_compat.hpp \
	$(libt_dir)/asio/detail/pipe_select_interrupter.hpp \
	$(libt_dir)/asio/detail/pop_options.hpp \
	$(libt_dir)/asio/detail/posix_event.hpp \
	$(libt_dir)/asio/detail/posix_fd_set_adapter.hpp \
	$(libt_dir)/asio/detail/posix_mutex.hpp \
	$(libt_dir)/asio/detail/posix_signal_blocker.hpp \
	$(libt_dir)/asio/detail/posix_thread.hpp \
	$(libt_dir)/asio/detail/posix_tss_ptr.hpp \
	$(libt_dir)/asio/detail/push_options.hpp \
	$(libt_dir)/asio/detail/reactive_socket_service.hpp \
	$(libt_dir)/asio/detail/reactor_op_queue.hpp \
	$(libt_dir)/asio/detail/resolver_service.hpp \
	$(libt_dir)/asio/detail/scoped_lock.hpp \
	$(libt_dir)/asio/detail/select_interrupter.hpp \
	$(libt_dir)/asio/detail/select_reactor.hpp \
	$(libt_dir)/asio/detail/select_reactor_fwd.hpp \
	$(libt_dir)/asio/detail/service_base.hpp \
	$(libt_dir)/asio/detail/service_id.hpp \
	$(libt_dir)/asio/detail/service_registry.hpp \
	$(libt_dir)/asio/detail/service_registry_fwd.hpp \
	$(libt_dir)/asio/detail/signal_blocker.hpp \
	$(libt_dir)/asio/detail/signal_init.hpp \
	$(libt_dir)/asio/detail/socket_holder.hpp \
	$(libt_dir)/asio/detail/socket_ops.hpp \
	$(libt_dir)/asio/detail/socket_option.hpp \
	$(libt_dir)/asio/detail/socket_select_interrupter.hpp \
	$(libt_dir)/asio/detail/socket_types.hpp \
	$(libt_dir)/asio/detail/strand_service.hpp \
	$(libt_dir)/asio/detail/task_io_service.hpp \
	$(libt_dir)/asio/detail/task_io_service_fwd.hpp \
	$(libt_dir)/asio/detail/thread.hpp \
	$(libt_dir)/asio/detail/throw_error.hpp \
	$(libt_dir)/asio/detail/timer_queue.hpp \
	$(libt_dir)/asio/detail/timer_queue_base.hpp \
	$(libt_dir)/asio/detail/tss_ptr.hpp \
	$(libt_dir)/asio/detail/win_event.hpp \
	$(libt_dir)/asio/detail/win_fd_set_adapter.hpp \
	$(libt_dir)/asio/detail/win_iocp_io_service.hpp \
	$(libt_dir)/asio/detail/win_iocp_io_service_fwd.hpp \
	$(libt_dir)/asio/detail/win_iocp_socket_service.hpp \
	$(libt_dir)/asio/detail/win_mutex.hpp \
	$(libt_dir)/asio/detail/win_signal_blocker.hpp \
	$(libt_dir)/asio/detail/win_thread.hpp \
	$(libt_dir)/asio/detail/win_tss_ptr.hpp \
	$(libt_dir)/asio/detail/wince_thread.hpp \
	$(libt_dir)/asio/detail/winsock_init.hpp \
	$(libt_dir)/asio/detail/wrapped_handler.hpp \
	$(libt_dir)/asio/impl/error_code.ipp \
	$(libt_dir)/asio/impl/io_service.ipp \
	$(libt_dir)/asio/impl/read.ipp \
	$(libt_dir)/asio/impl/read_until.ipp \
	$(libt_dir)/asio/impl/write.ipp \
	$(libt_dir)/asio/ip/address.hpp \
	$(libt_dir)/asio/ip/address_v4.hpp \
	$(libt_dir)/asio/ip/address_v6.hpp \
	$(libt_dir)/asio/ip/basic_endpoint.hpp \
	$(libt_dir)/asio/ip/basic_resolver.hpp \
	$(libt_dir)/asio/ip/basic_resolver_entry.hpp \
	$(libt_dir)/asio/ip/basic_resolver_iterator.hpp \
	$(libt_dir)/asio/ip/basic_resolver_query.hpp \
	$(libt_dir)/asio/ip/host_name.hpp \
	$(libt_dir)/asio/ip/multicast.hpp \
	$(libt_dir)/asio/ip/resolver_query_base.hpp \
	$(libt_dir)/asio/ip/resolver_service.hpp \
	$(libt_dir)/asio/ip/tcp.hpp \
	$(libt_dir)/asio/ip/udp.hpp \
	$(libt_dir)/asio/ip/unicast.hpp \
	$(libt_dir)/asio/ip/v6_only.hpp \
	$(libt_dir)/asio/ip/detail/socket_option.hpp \
	$(libt_dir)/asio/ssl/basic_context.hpp \
	$(libt_dir)/asio/ssl/context.hpp \
	$(libt_dir)/asio/ssl/context_base.hpp \
	$(libt_dir)/asio/ssl/context_service.hpp \
	$(libt_dir)/asio/ssl/stream.hpp \
	$(libt_dir)/asio/ssl/stream_base.hpp \
	$(libt_dir)/asio/ssl/stream_service.hpp \
	$(libt_dir)/asio/ssl/detail/openssl_context_service.hpp \
	$(libt_dir)/asio/ssl/detail/openssl_init.hpp \
	$(libt_dir)/asio/ssl/detail/openssl_operation.hpp \
	$(libt_dir)/asio/ssl/detail/openssl_stream_service.hpp \
	$(libt_dir)/asio/ssl/detail/openssl_types.hpp \
	\
	$(libt_dir)/zlib/crc32.h \
	$(libt_dir)/zlib/deflate.h \
	$(libt_dir)/zlib/inffast.h \
	$(libt_dir)/zlib/inflate.h \
	$(libt_dir)/zlib/inftrees.h \
	$(libt_dir)/zlib/trees.h \
	$(libt_dir)/zlib/zconf.h \
	$(libt_dir)/zlib/zlib.h \
	$(libt_dir)/zlib/zutil.h


springlobby_SOURCES = \
	src/updater/versionchecker.cpp \
	src/updater/versionchecker.h \
	src/sounds/ring_sound.h \
	src/sounds/pm_sound.h \
	src/springunitsynclib.cpp \
	src/springunitsynclib.h \
	src/unitsyncthread.cpp \
	src/unitsyncthread.h \
	src/mapgridctrl.cpp \
	src/mapgridctrl.h \
	src/mapselectdialog.cpp \
	src/mapselectdialog.h \
	src/bimap.h \
	src/chatlog.h \
	src/chatlog.cpp \
	src/images/broom.png.h \
	src/images/bot_ingame.png.h \
	src/images/bot_broom.png.h \
	src/images/channel_options.xpm \
	src/images/chanop_ingame.xpm \
	src/images/chanop_away.xpm \
	src/images/chanop_broom.xpm \
	src/images/chanop.xpm \
	src/images/admin_broom.png.h \
	src/images/host_spectator.xpm \
	src/images/host.xpm \
	src/images/not_found_icon.xpm \
	src/images/reload_map.xpm \
	src/images/download_map.xpm \
	src/images/up_downsel.xpm \
	src/images/upsel_down.xpm \
	src/images/up_down.xpm \
	src/images/player.xpm \
	src/ibattle.cpp \
	src/ibattle.h \
	src/nonportable.h \
	src/addbotdialog.cpp \
	src/addbotdialog.h \
	src/agreementdialog.cpp \
	src/agreementdialog.h \
	src/autohost.cpp \
	src/autohost.h \
	src/base64.cpp \
	src/base64.h \
	src/battle.cpp \
	src/battle.h \
	src/maintorrenttab.cpp \
	src/maintorrenttab.h \
	src/battlelistctrl.cpp \
	src/battlelistctrl.h \
	src/battlelistfilter.cpp \
	src/battlelistfilter.h \
	src/battlelistfiltervalues.h \
	src/battlelist.cpp \
	src/battlelist.h \
	src/battlelisttab.cpp \
	src/battlelisttab.h \
	src/battleroomlistctrl.cpp \
	src/battleroomlistctrl.h \
	src/battlemaptab.cpp \
	src/battlemaptab.h \
	src/battleoptionstab.cpp \
	src/battleoptionstab.h \
	src/battleroomtab.cpp \
	src/battleroomtab.h \
	src/boost/md5.cpp \
	src/boost/md5.hpp \
	src/crc.cpp \
	src/crc.h \
	src/channel/channel.cpp \
	src/channel/channel.h \
	src/channel/channellist.cpp \
	src/channel/channellist.h \
	src/channel/channellistctrl.cpp \
	src/channel/channellistctrl.h \
	src/chatoptionstab.cpp \
	src/chatoptionstab.h \
	src/chatpanel.cpp \
	src/chatpanel.h \
	src/connectwindow.cpp \
	src/connectwindow.h \
	src/crashreport.cpp \
	src/crashreport.h \
	src/countrycodes.cpp \
	src/countrycodes.h \
	src/flagimagedata.h \
	src/flagimages.cpp \
	src/flagimages.h \
	src/hostbattledialog.h \
	src/hostbattledialog.cpp \
	src/iconimagelist.cpp \
	src/iconimagelist.h \
	src/inetclass.h \
	src/iunitsync.h \
	src/mainchattab.cpp \
	src/mainchattab.h \
	src/mainjoinbattletab.cpp \
	src/mainjoinbattletab.h \
	src/mainoptionstab.cpp \
	src/mainoptionstab.h \
	src/mainsingleplayertab.cpp \
	src/mainsingleplayertab.h \
	src/mainwindow.cpp \
	src/mainwindow.h \
	src/mapctrl.cpp \
	src/mapctrl.h \
	src/mutexwrapper.h \
	src/offlinebattle.h \
	src/nicklistctrl.cpp \
	src/nicklistctrl.h \
	src/playback/playbacktab.h \
	src/playback/playbackthread.h \
	src/playback/playbackfilter.h \
	src/playback/replaylist.h \
	src/playback/replaylist.cpp \
	src/playback/playbacklistctrl.h \
	src/playback/playbacklistfiltervalues.h \
	src/sdlsound.h \
	src/sdlsound.cpp \
	src/server.cpp \
	src/serverevents.cpp \
	src/serverevents.h \
	src/server.h \
	src/settings.cpp \
	src/settings.h \
	src/socket.cpp \
	src/socket.h \
	src/spring.cpp \
	src/spring.h \
	src/singleplayerbattle.cpp \
	src/singleplayerbattle.h \
	src/singleplayertab.cpp \
	src/singleplayertab.h \
	src/springlobbyapp.cpp \
	src/springlobbyapp.h \
	src/springoptionstab.cpp \
	src/springoptionstab.h \
	src/springprocess.cpp \
	src/springprocess.h \
	src/springunitsync.cpp \
	src/springunitsync.h \
	src/tasserver.cpp \
	src/tasserver.h \
	src/tasservertokentable.h \
	src/ui.cpp \
	src/ui.h \
	src/uiutils.cpp \
	src/uiutils.h \
	src/user.cpp \
	src/user.h \
	src/usermenu.h \
	src/userlist.cpp \
	src/userlist.h \
	src/userlistctrl.cpp \
	src/userlistctrl.h \
	src/utils.cpp \
	src/utils.h \
	src/torrentlistctrl.cpp \
	src/torrentlistctrl.h \
	src/torrentoptionspanel.cpp \
	src/torrentoptionspanel.h \
	src/images/start_ally.xpm \
	src/images/start_enemy.xpm \
	src/images/start_unused.xpm \
	src/images/admin_away.png.h \
	src/images/admin_ingame.png.h \
	src/images/admin.png.h \
	src/images/no1_icon.png.h \
	src/images/no2_icon.png.h \
	src/images/away.png.h \
	src/images/battle_list.xpm \
	src/images/battle_map.xpm \
	src/images/battle_settings.xpm \
	src/images/battle.xpm \
	src/images/bot.xpm \
	src/images/bot_away.xpm \
	src/images/channel.xpm \
	src/images/chat_icon.png.h \
	src/images/chat_icon_text.png.h \
	src/images/closed_game.png.h \
	src/images/closed_full_game.png.h \
	src/images/closed_pw_game.png.h \
	src/images/closed_full_pw_game.png.h \
	src/images/torrentoptionspanel_icon.png.h \
	src/images/close_hi.xpm \
	src/images/close.xpm \
	src/images/colourbox.xpm \
	src/images/connect.xpm \
	src/images/down.xpm \
	src/images/exists.xpm \
	src/images/fixcolours_palette.xpm \
	src/images/ingame.png.h \
	src/images/join_icon.png.h \
	src/images/join_icon_text.png.h \
	src/images/nexists.xpm \
	src/images/nready_q.xpm \
	src/images/nready_unsync.xpm \
	src/images/open_game.png.h \
	src/images/open_full_game.png.h \
	src/images/open_pw_game.png.h \
	src/images/open_full_pw_game.png.h \
	src/images/options_icon.png.h \
	src/images/options_icon_text.png.h \
	src/images/rank0.xpm \
	src/images/rank1.xpm \
	src/images/rank2.xpm \
	src/images/rank3.xpm \
	src/images/rank4.xpm \
	src/images/rank5.xpm \
	src/images/rank6.xpm \
	src/images/rank_unknown.xpm \
	src/images/ready_q.xpm \
	src/images/ready_unsync.xpm \
	src/images/playback_icon.png.h \
	src/images/playback_icon_text.png.h \
	src/images/downloads_icon.png.h \
	src/images/single_player_icon.png.h \
	src/images/downloads_icon_text.png.h \
	src/images/warning_small.png.h \
	src/images/spectator.png.h \
	src/images/single_player_icon_text.png.h \
	src/images/map_select_1.png.h \
	src/images/map_select_2.png.h \
	src/images/select_icon.xpm \
	src/images/server.xpm \
	src/images/spectator.xpm \
	src/images/spring.xpm \
	src/images/springlobby.xpm \
	src/images/started_game.xpm \
	src/images/unknown_flag.xpm \
	src/images/up.xpm \
	src/images/userchat.xpm \
	src/images/flags/AD.xpm \
	src/images/flags/AE.xpm \
	src/images/flags/AF.xpm \
	src/images/flags/AG.xpm \
	src/images/flags/AI.xpm \
	src/images/flags/AL.xpm \
	src/images/flags/AM.xpm \
	src/images/flags/AN.xpm \
	src/images/flags/AO.xpm \
	src/images/flags/AR.xpm \
	src/images/flags/AS.xpm \
	src/images/flags/AT.xpm \
	src/images/flags/AU.xpm \
	src/images/flags/AW.xpm \
	src/images/flags/AX.xpm \
	src/images/flags/AZ.xpm \
	src/images/flags/BA.xpm \
	src/images/flags/BB.xpm \
	src/images/flags/BD.xpm \
	src/images/flags/BE.xpm \
	src/images/flags/BF.xpm \
	src/images/flags/BG.xpm \
	src/images/flags/BH.xpm \
	src/images/flags/BI.xpm \
	src/images/flags/BJ.xpm \
	src/images/flags/BM.xpm \
	src/images/flags/BN.xpm \
	src/images/flags/BO.xpm \
	src/images/flags/BR.xpm \
	src/images/flags/BS.xpm \
	src/images/flags/BT.xpm \
	src/images/flags/BV.xpm \
	src/images/flags/BW.xpm \
	src/images/flags/BY.xpm \
	src/images/flags/BZ.xpm \
	src/images/flags/CA.xpm \
	src/images/flags/CC.xpm \
	src/images/flags/CD.xpm \
	src/images/flags/CF.xpm \
	src/images/flags/CG.xpm \
	src/images/flags/CH.xpm \
	src/images/flags/CI.xpm \
	src/images/flags/CK.xpm \
	src/images/flags/CL.xpm \
	src/images/flags/CM.xpm \
	src/images/flags/CN.xpm \
	src/images/flags/CO.xpm \
	src/images/flags/CR.xpm \
	src/images/flags/CS.xpm \
	src/images/flags/CU.xpm \
	src/images/flags/CV.xpm \
	src/images/flags/CX.xpm \
	src/images/flags/CY.xpm \
	src/images/flags/CZ.xpm \
	src/images/flags/DE.xpm \
	src/images/flags/DJ.xpm \
	src/images/flags/DK.xpm \
	src/images/flags/DM.xpm \
	src/images/flags/DO.xpm \
	src/images/flags/DZ.xpm \
	src/images/flags/EC.xpm \
	src/images/flags/EE.xpm \
	src/images/flags/EG.xpm \
	src/images/flags/EH.xpm \
	src/images/flags/ER.xpm \
	src/images/flags/ES.xpm \
	src/images/flags/ET.xpm \
	src/images/flags/FAM.xpm \
	src/images/flags/FI.xpm \
	src/images/flags/FJ.xpm \
	src/images/flags/FK.xpm \
	src/images/flags/FM.xpm \
	src/images/flags/FO.xpm \
	src/images/flags/FR.xpm \
	src/images/flags/GA.xpm \
	src/images/flags/GB.xpm \
	src/images/flags/GD.xpm \
	src/images/flags/GE.xpm \
	src/images/flags/GF.xpm \
	src/images/flags/GH.xpm \
	src/images/flags/GI.xpm \
	src/images/flags/GL.xpm \
	src/images/flags/GM.xpm \
	src/images/flags/GN.xpm \
	src/images/flags/GP.xpm \
	src/images/flags/GQ.xpm \
	src/images/flags/GR.xpm \
	src/images/flags/GS.xpm \
	src/images/flags/GT.xpm \
	src/images/flags/GU.xpm \
	src/images/flags/GW.xpm \
	src/images/flags/GY.xpm \
	src/images/flags/HK.xpm \
	src/images/flags/HM.xpm \
	src/images/flags/HN.xpm \
	src/images/flags/HR.xpm \
	src/images/flags/HT.xpm \
	src/images/flags/HU.xpm \
	src/images/flags/ID.xpm \
	src/images/flags/IE.xpm \
	src/images/flags/IL.xpm \
	src/images/flags/IN.xpm \
	src/images/flags/IO.xpm \
	src/images/flags/IQ.xpm \
	src/images/flags/IR.xpm \
	src/images/flags/IS.xpm \
	src/images/flags/IT.xpm \
	src/images/flags/JM.xpm \
	src/images/flags/JO.xpm \
	src/images/flags/JP.xpm \
	src/images/flags/KE.xpm \
	src/images/flags/KG.xpm \
	src/images/flags/KH.xpm \
	src/images/flags/KI.xpm \
	src/images/flags/KM.xpm \
	src/images/flags/KN.xpm \
	src/images/flags/KP.xpm \
	src/images/flags/KR.xpm \
	src/images/flags/KW.xpm \
	src/images/flags/KY.xpm \
	src/images/flags/KZ.xpm \
	src/images/flags/LA.xpm \
	src/images/flags/LB.xpm \
	src/images/flags/LC.xpm \
	src/images/flags/LI.xpm \
	src/images/flags/LK.xpm \
	src/images/flags/LR.xpm \
	src/images/flags/LS.xpm \
	src/images/flags/LT.xpm \
	src/images/flags/LU.xpm \
	src/images/flags/LV.xpm \
	src/images/flags/LY.xpm \
	src/images/flags/MA.xpm \
	src/images/flags/MC.xpm \
	src/images/flags/MD.xpm \
	src/images/flags/ME.xpm \
	src/images/flags/MG.xpm \
	src/images/flags/MH.xpm \
	src/images/flags/MK.xpm \
	src/images/flags/ML.xpm \
	src/images/flags/MM.xpm \
	src/images/flags/MN.xpm \
	src/images/flags/MO.xpm \
	src/images/flags/MP.xpm \
	src/images/flags/MQ.xpm \
	src/images/flags/MR.xpm \
	src/images/flags/MS.xpm \
	src/images/flags/MT.xpm \
	src/images/flags/MU.xpm \
	src/images/flags/MV.xpm \
	src/images/flags/MW.xpm \
	src/images/flags/MX.xpm \
	src/images/flags/MY.xpm \
	src/images/flags/MZ.xpm \
	src/images/flags/NA.xpm \
	src/images/flags/NC.xpm \
	src/images/flags/NE.xpm \
	src/images/flags/NF.xpm \
	src/images/flags/NG.xpm \
	src/images/flags/NI.xpm \
	src/images/flags/NL.xpm \
	src/images/flags/NO.xpm \
	src/images/flags/NP.xpm \
	src/images/flags/NR.xpm \
	src/images/flags/NU.xpm \
	src/images/flags/NZ.xpm \
	src/images/flags/OM.xpm \
	src/images/flags/PA.xpm \
	src/images/flags/PE.xpm \
	src/images/flags/PF.xpm \
	src/images/flags/PG.xpm \
	src/images/flags/PH.xpm \
	src/images/flags/PK.xpm \
	src/images/flags/PL.xpm \
	src/images/flags/PM.xpm \
	src/images/flags/PN.xpm \
	src/images/flags/PR.xpm \
	src/images/flags/PS.xpm \
	src/images/flags/PT.xpm \
	src/images/flags/PW.xpm \
	src/images/flags/PY.xpm \
	src/images/flags/QA.xpm \
	src/images/flags/RE.xpm \
	src/images/flags/RO.xpm \
	src/images/flags/RS.xpm \
	src/images/flags/RU.xpm \
	src/images/flags/RW.xpm \
	src/images/flags/SA.xpm \
	src/images/flags/SB.xpm \
	src/images/flags/SC.xpm \
	src/images/flags/SD.xpm \
	src/images/flags/SE.xpm \
	src/images/flags/SG.xpm \
	src/images/flags/SH.xpm \
	src/images/flags/SI.xpm \
	src/images/flags/SJ.xpm \
	src/images/flags/SK.xpm \
	src/images/flags/SL.xpm \
	src/images/flags/SM.xpm \
	src/images/flags/SN.xpm \
	src/images/flags/SO.xpm \
	src/images/flags/SR.xpm \
	src/images/flags/ST.xpm \
	src/images/flags/SV.xpm \
	src/images/flags/SY.xpm \
	src/images/flags/SZ.xpm \
	src/images/flags/TC.xpm \
	src/images/flags/TD.xpm \
	src/images/flags/TF.xpm \
	src/images/flags/TG.xpm \
	src/images/flags/TH.xpm \
	src/images/flags/TJ.xpm \
	src/images/flags/TK.xpm \
	src/images/flags/TL.xpm \
	src/images/flags/TM.xpm \
	src/images/flags/TN.xpm \
	src/images/flags/TO.xpm \
	src/images/flags/TR.xpm \
	src/images/flags/TT.xpm \
	src/images/flags/TV.xpm \
	src/images/flags/TW.xpm \
	src/images/flags/TZ.xpm \
	src/images/flags/UA.xpm \
	src/images/flags/UG.xpm \
	src/images/flags/UM.xpm \
	src/images/flags/US.xpm \
	src/images/flags/UY.xpm \
	src/images/flags/UZ.xpm \
	src/images/flags/VA.xpm \
	src/images/flags/VC.xpm \
	src/images/flags/VE.xpm \
	src/images/flags/VG.xpm \
	src/images/flags/VI.xpm \
	src/images/flags/VN.xpm \
	src/images/flags/VU.xpm \
	src/images/flags/WF.xpm \
	src/images/flags/WS.xpm \
	src/images/flags/YE.xpm \
	src/images/flags/YT.xpm \
	src/images/flags/ZA.xpm \
	src/images/flags/ZM.xpm \
	src/images/flags/ZW.xpm \
	src/images/empty.xpm \
	src/customlistctrl.h \
	src/customlistctrl.cpp \
	src/customvirtlistctrl.h \
	src/mmoptionmodel.h \
	src/mmoptionmodel.cpp \
	src/mmoptionswrapper.h \
	src/mmoptionswrapper.cpp \
	src/battleroommmoptionstab.h \
	src/torrentwrapper.cpp \
	src/torrentwrapper.h \
	src/thingdef.h \
	src/spinctld.h \
	src/spinctld.cpp \
	src/autobalancedialog.cpp \
	src/autobalancedialog.h \
	src/tdfcontainer.cpp \
	src/tdfcontainer.h \
	src/globalevents.h \
	src/globalevents.cpp \
	src/httpdownloader.h \
	src/httpdownloader.cpp \
	src/Helper/TextCompletionDatabase.hpp \
	src/Helper/TextCompletionDatabase.cpp \
	src/Helper/wxTranslationHelper.h \
	src/Helper/wxTranslationHelper.cpp \
	src/Helper/tasclientimport.h \
	src/Helper/tasclientimport.cpp \
	src/Helper/slhtmlwindow.cpp \
	src/Helper/slhtmlwindow.h \
	src/channel/channelchooser.cpp \
	src/channel/channelchooser.h \
	src/channel/channelchooserdialog.cpp \
	src/channel/channelchooserdialog.h \
        src/Helper/colorbutton.cpp \
	src/Helper/colorbutton.h \
        src/Helper/wxtextctrlhist.cpp \
	src/Helper/wxtextctrlhist.h \
	src/Helper/sortutil.h \
	src/Helper/imageviewer.h \
	src/Helper/imageviewer.cpp \
	src/filelister/filelistctrl.h \
	src/filelister/filelistdialog.h \
	src/filelister/filelistfilter.h \
	src/filelister/filelistctrl.cpp \
	src/filelister/filelistdialog.cpp \
	src/filelister/filelistfilter.cpp \
	configure.ac \
	src/channel/autojoinchanneldialog.h \
	src/autopointers.h \
	src/channel/autojoinchanneldialog.cpp \
	src/useractions.h \
	src/useractions.cpp \
	src/selectusersdialog.h \
	src/selectusersdialog.cpp \
	src/groupoptionspanel.h \
	src/groupoptionspanel.cpp \
	src/lobbyoptionstab.h \
	src/lobbyoptionstab.cpp \
	src/aui/auimanager.h \
	src/aui/auimanager.cpp \
	src/aui/auiutils.h \
	src/aui/artprovider.h \
	src/aui/artprovider.cpp \
	src/updater/updater.h \
	src/updater/updater.cpp \
	src/updater/exedownloader.h \
	src/updater/exedownloader.cpp \
	src/widgets/downloadlistctrl.cpp \
	src/widgets/downloadlistctrl.h \
	src/widgets/downloaddialog.cpp \
	src/widgets/downloaddialog.h \
	src/widgets/downloadpanel.cpp \
	src/widgets/downloadpanel.h \
	src/widgets/infopanel.cpp \
	src/widgets/infopanel.h \
	src/widgets/widget.cpp \
	src/widgets/widget.h \
	src/usermenu.h \
	src/thread.cpp \
	src/thread.h \
	src/globalsmanager.cpp \
	src/globalsmanager.h \
	src/mmoptionwindows.cpp \
	src/mmoptionwindows.h \
	src/userrank.h \
	src/playback/savegamelist.cpp \
	src/playback/savegamelist.h \
	src/images/floppy_icon.png.h


if USE_WINDRES
springlobby_SOURCES += \
		src/springlobby.rc \
		src/Helper/listctrl.cpp
endif

if USE_LIBT_INCLUDED
springlobby_SOURCES += \
		$(libtorrent_headers) \
 		$(libtorrent_sources)
endif

# TODO keep only a single list instead of duplicating the lists below
# note, integrated has everything but main.cpp
springlobby_SOURCES += \
	src/settings++/se_utils.h \
	src/settings++/se_utils.cpp \
	src/settings++/frame.cpp \
	src/settings++/main.h \
	src/settings++/tab_ui.cpp \
	src/settings++/tab_render_detail.cpp \
	src/settings++/tab_quality_video.h \
	src/settings++/frame.h \
	src/settings++/tab_audio.h \
	src/settings++/tab_debug.cpp \
	src/settings++/tab_debug.h \
	src/settings++/tab_audio.cpp \
	src/settings++/presets.h \
	src/settings++/tab_abstract.cpp \
	src/settings++/Defs.hpp \
	src/settings++/tab_simple.cpp \
	src/settings++/tab_quality_video.cpp \
	src/settings++/tab_ui.h \
	src/settings++/tab_simple.h \
	src/images/springsettings.xpm \
	src/settings++/tab_render_detail.h \
	src/settings++/tab_abstract.h \
	src/settings++/panel_pathoption.h \
	src/settings++/panel_pathoption.cpp \
	src/settings++/custom_dialogs.h \
	src/settings++/custom_dialogs.cpp \
	src/settings++/helpmenufunctions.h \
	src/settings++/helpmenufunctions.cpp

springsettings_SOURCES = \
	src/crashreport.cpp \
	src/crashreport.h \
	src/spinctld.h \
	src/spinctld.cpp \
	src/springunitsynclib.cpp \
	src/springunitsynclib.h \
	src/settings.cpp \
	src/settings.h \
	src/utils.cpp \
	src/utils.h \
	src/uiutils.cpp \
	src/uiutils.h \
	src/globalsmanager.cpp \
	src/settings++/se_utils.cpp \
	src/settings++/se_utils.h \
	src/settings++/frame.cpp \
	src/settings++/main.h \
	src/settings++/tab_ui.cpp \
	src/settings++/tab_render_detail.cpp \
	src/settings++/tab_quality_video.h \
	src/settings++/frame.h \
	src/settings++/tab_audio.h \
	src/settings++/tab_debug.cpp \
	src/settings++/tab_debug.h \
	src/settings++/tab_audio.cpp \
	src/settings++/presets.h \
	src/settings++/tab_abstract.cpp \
	src/settings++/Main.cpp \
	src/settings++/Defs.hpp \
	src/settings++/tab_simple.cpp \
	src/settings++/tab_quality_video.cpp \
	src/settings++/tab_ui.h \
	src/settings++/tab_simple.h \
	src/images/springsettings.xpm \
	src/settings++/tab_render_detail.h \
	src/settings++/tab_abstract.h \
	src/settings++/panel_pathoption.h \
	src/settings++/panel_pathoption.cpp	\
	src/settings++/custom_dialogs.h \
	src/settings++/custom_dialogs.cpp \
	src/settings++/helpmenufunctions.h \
	src/settings++/helpmenufunctions.cpp


if USE_WINDRES
springsettings_SOURCES += \
	src/settings++/settings.rc
endif
