dnl Process this file with autoconf to produce a configure script.

AC_INIT([springlobby], [0.1], [FIXME_our_bugs_email_address])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/springlobbyapp.cpp])

AC_LANG([C++])

AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CC
#AC_PROG_LIBTOOL

AM_OPTIONS_WXCONFIG

reqwx=2.6.0
AM_PATH_WXCONFIG($reqwx, [wxWin=1])
if test "$wxWin" != 1; then
   AC_MSG_ERROR([
           wxWidgets must be installed on your system
           but wx-config script couldn't be found.

           Please check that wx-config is in path, the directory
           where wxWidgets libraries are installed (returned by
           'wx-config --libs' command) is in LD_LIBRARY_PATH or
           equivalent variable and wxWidgets version is $reqwx or above.
   ])
fi

dnl Set gettext package name
GETTEXT_PACKAGE=springlobby
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

PKG_CHECK_MODULES(PACKAGE, [gtk+-2.0 libglade-2.0])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
